--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,33 +25,25 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    //Xframe快速框架
-    //可以单独使用，不需要依赖下方的扩展包
-    //RxJava扩展支持，根据需要添加
-    //下载管理和上传管理扩展，根据需要添加
-
-    /*使用注解插件*/
-    //banner控件
-    //公告控件
-
 // RxLifecycle管理Rx的生命周期
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.youth.xframe:xframe:1.0.2'
-    compile 'com.lzy.net:okgo:2.1.4'
-    compile 'com.lzy.net:okrx:0.1.2'
-    compile 'com.lzy.net:okserver:1.1.3'
-    compile 'com.jakewharton:butterknife:8.4.0'
-    compile 'com.google.code.gson:gson:2.5'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.youth.xframe:xframe:1.0.2'  //Xframe快速框架
+    compile 'com.lzy.net:okgo:2.1.4'  //可以单独使用，不需要依赖下方的扩展包
+    compile 'com.lzy.net:okrx:0.1.2' //RxJava扩展支持，根据需要添加
+    compile 'com.lzy.net:okserver:1.1.3'//下载管理和上传管理扩展，根据需要添加
+    compile 'com.jakewharton:butterknife:8.4.0' /*使用注解插件*/
+    compile 'com.google.code.gson:gson:2.5'//json解析工具
+    compile 'com.github.bumptech.glide:glide:3.7.0'//图片加载工具
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.15'
-    compile 'com.youth.banner:banner:1.4.9'
-    compile 'com.sunfusheng:marqueeview:1.0.0'
-    compile 'com.zhy:autolayout:1.4.5'
-    compile 'com.trello:rxlifecycle:0.4.0'
-    compile 'com.trello:rxlifecycle-components:0.4.0'
+//Recyler多布局基础adapter
+    compile 'com.youth.banner:banner:1.4.9'  //banner控件
+    compile 'com.sunfusheng:marqueeview:1.0.0' //公告控件
+    compile 'com.zhy:autolayout:1.4.5'//自适应layout
+    compile 'com.trello:rxlifecycle:0.4.0'//Rx生命周期管理
+    compile 'com.trello:rxlifecycle-components:0.4.0'//Rx生命周期管理
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 }
