--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.xinyuan.xyshop">
 
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,6 +19,9 @@
             android:name="design_height"
             android:value="2560">
         </meta-data>
+        <meta-data
+            android:name="com.xinyuan.xyshop.util.GlideConfiguration"
+            android:value="GlideModule"/>
 
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -29,6 +34,11 @@
             android:name=".ui.goods.GoodDetailsActivity"
             android:label="@string/title_activity_good_details"
             android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".ui.LoadingViewActivity"
+            android:label="@string/title_activity_loading_view"
+            android:theme="@style/AppTheme">
         </activity>
     </application>
 
