--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,20 +25,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-// RxLifecycle管理Rx的生命周期
-    //Xframe快速框架
-    //可以单独使用，不需要依赖下方的扩展包
-    //RxJava扩展支持，根据需要添加
-    //下载管理和上传管理扩展，根据需要添加
-    /*使用注解插件*/
-    //json解析工具
-    //图片加载工具
-    //Recyler多布局基础adapter
-    //banner控件
-    //公告控件
-    //自适应layout
-    //Rx生命周期管理
-    //Rx生命周期管理
+
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
@@ -52,11 +39,12 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.15'
     compile 'com.youth.banner:banner:1.4.9'
-    compile 'com.sunfusheng:marqueeview:1.0.0'
+    compile 'com.sunfusheng:marqueeview:1.1.0'
     compile 'com.zhy:autolayout:1.4.5'
     compile 'com.trello:rxlifecycle:0.4.0'
     compile 'com.trello:rxlifecycle-components:0.4.0'
     compile 'com.github.paolorotolo:appintro:1.1.0'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.google.android:flexbox:0.2.6'
 }
