--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,9 @@
         </activity>
         <activity android:name=".ui.goods.PromotionListActivity">
         </activity>
-        <activity android:name=".ui.goods.SearchGoodsShowActivity">
+        <activity
+            android:name=".ui.goods.SearchGoodsShowActivity"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
