--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
 }
 
 dependencies {
@@ -41,11 +44,12 @@ dependencies {
     compile 'com.youth.banner:banner:1.4.9'
     compile 'com.sunfusheng:marqueeview:1.1.0'
     compile 'com.zhy:autolayout:1.4.5'
-    compile 'com.trello:rxlifecycle:0.4.0'
-    compile 'com.trello:rxlifecycle-components:0.4.0'
+    compile 'com.trello:rxlifecycle:1.0'
+    compile 'com.trello:rxlifecycle-components:1.0'
     compile 'com.github.paolorotolo:appintro:1.1.0'
     compile 'com.google.android:flexbox:0.2.6'
     compile 'com.gxz.pagerslidingtabstrip:library:1.3'
+    compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 }
