--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,9 @@
             android:name=".ui.goods.SearchGoodsActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity android:name=".ui.home.BrandActivity">
+        <activity
+            android:name=".ui.home.BrandActivity"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
