--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'cc.solart:turbo-recyclerview-helper:1.0.3-beta'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile 'com.yanzhenjie:fragment:1.0.1'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+
 }
