--- a/xframe/build.gradle
+++ b/xframe/build.gradle
@@ -27,7 +27,10 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25+'
     compile 'com.android.support:recyclerview-v7:25+'
-
+    testCompile 'junit:junit:4.12'
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
 
 }
 def siteUrl = 'https://github.com/youth5201314/XFrame' // 项目的主页
