--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,6 @@ dependencies {
     compile 'com.trello:rxlifecycle-components:1.0'
     compile 'com.github.paolorotolo:appintro:1.1.0'
     compile 'com.google.android:flexbox:0.2.6'
-
     compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
     compile 'cc.solart:turbo-recyclerview-helper:1.0.3-beta'
@@ -55,4 +54,6 @@ dependencies {
     compile files('lib/badgeview.jar')
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
     compile 'com.github.andyxialm:ColorDialog:1.0.0'
+    compile files('lib/tbs_sdk.jar')
+    compile 'com.contrarywind:Android-PickerView:3.2.5'
 }
