--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile files('lib/badgeview.jar')
+    compile files('lib/tbs_sdk.jar')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
@@ -46,14 +48,13 @@ dependencies {
     compile 'com.github.paolorotolo:appintro:1.1.0'
     compile 'com.google.android:flexbox:0.2.6'
     compile 'com.android.support:support-v4:25.3.1'
-    testCompile 'junit:junit:4.12'
     compile 'cc.solart:turbo-recyclerview-helper:1.0.3-beta'
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile files('lib/badgeview.jar')
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
     compile 'com.github.andyxialm:ColorDialog:1.0.0'
-    compile files('lib/tbs_sdk.jar')
     compile 'com.contrarywind:Android-PickerView:3.2.5'
+    compile 'com.github.YancyYe:GalleryPick:1.2.1'
+    testCompile 'junit:junit:4.12'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
 }
