--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,8 +56,11 @@ dependencies {
     compile 'com.github.YancyYe:GalleryPick:1.2.1'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
-    //fragment
+    compile 'com.google.zxing:core:3.2.1'
     compile 'me.yokeyword:fragmentation:1.0.0'
     compile 'com.yanzhenjie:recyclerview-swipe:1.0.4'
     compile 'com.tamic:browse:1.0.0'
+    compile 'com.google.zxing:core:3.2.1'
+    compile 'cn.bingoogolapple:bga-qrcodecore:1.1.7@aar'
+    compile 'cn.bingoogolapple:bga-zxing:1.1.7@aar'
 }
